--- a/src/app/components/students/add-student/add-student.component.html
+++ b/src/app/components/students/add-student/add-student.component.html
@@ -1,4 +1,5 @@
-<!-- Edit Contact Form -->
+<!-- reactive driven approach -->
+<!-- Add Contact Form -->
 <form [formGroup]="studentForm" novalidate (ngSubmit)="onCreateStudent()">
   <mat-card class="shipping-card">
     <mat-card-header>
