auth guard for routes

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -25,8 +25,8 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span routerLink="auth">
-        <a>Student Management App </a>
+      <span routerLink="students">
+        <a>Student Management App</a>
       </span>
       <span class="spacer"></span>
       <div [class.hidden]="isHandset$ |async">
