auth to firebase storage

--- a/src/app/components/students/add-student/add-student.component.html
+++ b/src/app/components/students/add-student/add-student.component.html
@@ -62,7 +62,7 @@
 
       <div class="row">
         <div class="col">
-          <h2>Datei hochladen:</h2>
+          <h2 class="margin-l">Datei hochladen:</h2>
           <div>
             <app-upload-form></app-upload-form>
           </div>
