--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -11,7 +11,7 @@
 
   <mat-grid-tile>
     <div class="box-2">
-      <span>Schüler hinzufügen:</span>
+      <span>Schüler / Datei hinzufügen:</span>
       <button mat-raised-button color="primary" routerLink="/students/add">
         <mat-icon aria-label="edit_icon">add</mat-icon>
         NEU
