--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="auth" (click)="drawer.toggle()" routerLinkActive="active-link"
-        *ngIf="!isAuthenticated">Authentifizieren</a>
+        *ngIf="!isAuthenticated">Anmeldung</a>
       <a mat-list-item routerLink="/students" (click)="drawer.toggle()" routerLinkActive="active-link"
         *ngIf="isAuthenticated">Schülerliste</a>
       <a mat-list-item routerLink="/to-dos" (click)="drawer.toggle()" routerLinkActive="active-link"
@@ -30,7 +30,7 @@
       </span>
       <span class="spacer"></span>
       <div [class.hidden]="isHandset$ |async">
-        <a mat-button routerLink="auth" routerLinkActive="active-link" *ngIf="!isAuthenticated">Authentifizieren</a>
+        <a mat-button routerLink="auth" routerLinkActive="active-link" *ngIf="!isAuthenticated">Anmeldung</a>
         <a mat-button routerLink="/students" routerLinkActive="active-link" *ngIf="isAuthenticated">Schülerliste</a>
         <a mat-button routerLink="/to-dos" routerLinkActive="active-link" *ngIf="isAuthenticated">Meine to do's</a>
         <a mat-button routerLink="/my-profile" routerLinkActive="active-link" *ngIf="isAuthenticated">Mein Profil</a>
