--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,11 +2,25 @@
 @use "@angular/material" as mat;
 @include mat.core();
 
+@include mat.strong-focus-indicators(
+  (
+    border-style: dotted,
+    border-width: 4px,
+    border-radius: 2px,
+  )
+);
+
+/* light-theme */
 $my-primary: mat.define-palette(mat.$indigo-palette, 500);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
 // The "warn" palette is optional and defaults to red if not specified.
 $my-warn: mat.define-palette(mat.$red-palette);
+
+/* dark-theme */
+$my-primary2: mat.define-palette(mat.$pink-palette, 500);
+$my-accent2: mat.define-palette(mat.$blue-gray-palette, 400);
+// The "warn" palette is optional and defaults to red if not specified.
+$my-warn2: mat.define-palette(mat.$red-palette);
 
 $my-theme-light: mat.define-light-theme(
   (
@@ -21,15 +35,23 @@ $my-theme-light: mat.define-light-theme(
 $my-theme-dark: mat.define-dark-theme(
   (
     color: (
-      primary: $my-primary,
-      accent: $my-accent,
-      warn: $my-warn,
+      primary: $my-primary2,
+      accent: $my-accent2,
+      warn: $my-warn2,
     ),
   )
 );
 
 .theme-dark {
   @include mat.all-component-colors($my-theme-dark);
+
+  .dark-link,
+  .dark-link:visited {
+    color: white !important;
+  }
+  .dark-link:hover {
+    color: pink !important;
+  }
 }
 
 .theme-light {
@@ -40,6 +62,7 @@ html,
 body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
