--- a/src/app/components/students/students.component.css
+++ b/src/app/components/students/students.component.css
@@ -69,6 +69,9 @@
   font-size: 14px;
   text-align: center;
 }
+.example-box .name-width {
+  width: 200px;
+}
 
 .cdk-drag-preview {
   box-sizing: border-box;
