--- a/src/app/components/students/students.component.scss
+++ b/src/app/components/students/students.component.scss
@@ -65,6 +65,9 @@
   background: white;
   font-size: 14px;
   text-align: center;
+  .name-width {
+    width: 200px;
+  }
 }
 
 .cdk-drag-preview {
