improved resp. design

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -27,10 +27,9 @@
       <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
   </mat-form-field>
-  <div>
+  <div class="btn-container">
     <button mat-raised-button color="primary" type="submit" [disabled]="!authForm.valid">{{ isLoginMode ? 'Login' :
       'Registrieren' }}</button>
-    |
     <button mat-raised-button color="accent" type="button" (click)="onSwitchMode()">
       {{ isLoginMode ? ' Zur Registrierung' : 'Zum Login'}} wechseln</button>
   </div>
