--- a/src/app/components/students/view-student/view-student.component.html
+++ b/src/app/components/students/view-student/view-student.component.html
@@ -10,7 +10,7 @@
         <mat-list-item role="listitem">Ort: {{student.studentLocation}}<span></span></mat-list-item>
         <mat-list-item role="listitem">Lernjahr: {{student.learningYear}} <span></span></mat-list-item>
         <mat-list-item role="listitem">Notizen: {{student.studentNotes}}<span></span></mat-list-item>
-        <div>
+        <div class="mt-10">
           <app-upload-list></app-upload-list>
         </div>
       </mat-list>
