--- a/src/app/components/auth/auth.component.css
+++ b/src/app/components/auth/auth.component.css
@@ -17,4 +17,25 @@
 
 .example-container .mat-form-field + .mat-form-field {
   margin-left: 8px;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: column;
+}
+.btn-container > button {
+  margin-bottom: 12px;
+}
+
+@media screen and (min-width: 960px) {
+  .btn-container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .btn-container > button {
+    width: 100%;
+  }
+  .btn-container > button:first-child {
+    margin-right: 20px;
+  }
 }/*# sourceMappingURL=auth.component.css.map */
