--- a/src/app/components/auth/auth.component.scss
+++ b/src/app/components/auth/auth.component.scss
@@ -18,3 +18,24 @@
 .example-container .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
+
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  > button {
+    margin-bottom: 12px;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .btn-container {
+    flex-direction: row;
+    justify-content: space-between;
+    > button {
+      width: 100%;
+      &:first-child {
+        margin-right: 20px;
+      }
+    }
+  }
+}
