--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -26,7 +26,7 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span routerLink="students">
-        <a>Student Management App</a>
+        <a class="title">Student Management</a>
       </span>
       <span class="spacer"></span>
       <div [class.hidden]="isHandset$ |async">
