--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,5 +1,5 @@
 .grid-container {
-  margin: 20px;
+  margin: 10px;
 }
 
 .sidenav-container {
@@ -34,6 +34,19 @@
 
 a {
   cursor: pointer;
+}
+
+.title {
+  font-size: 18px;
+}
+
+@media screen and (min-width: 600px) {
+  .grid-container {
+    margin: 20px;
+  }
+  .title {
+    font-size: 20px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
