--- a/src/app/components/students/students.component.css
+++ b/src/app/components/students/students.component.css
@@ -62,21 +62,22 @@
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   box-sizing: border-box;
-  cursor: move;
+  /* cursor: move; */
   background: white;
   font-size: 14px;
   text-align: center;
 }
 .example-box .name-width {
-  width: 200px;
+  width: 150px;
 }
 
-.cdk-drag-preview {
+/* .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
@@ -85,16 +86,14 @@
 
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
+} */
 .example-box:last-child {
   border: none;
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+/* .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
+} */
 @media screen and (min-width: 600px) and (max-width: 959.98px) {
   .box-2 button {
     margin: 0 auto;
