--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -28,10 +28,11 @@
   <div *ngIf="showLocation">
     <article *ngFor="let location of locations" class="example-container">
       <h3>{{ location }}</h3>
-      <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-        <div class="example-box" *ngFor="let student of students | filterLocation: location" cdkDragLockAxis="y"
-          cdkDrag>
-          <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
+      <div class="example-list">
+        <!-- cdkDropList (cdkDropListDropped)="drop($event)"-->
+        <div class="example-box" *ngFor="let student of students | filterLocation: location">
+          <!-- cdkDragLockAxis="y"  cdkDrag-->
+          <!-- <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon> -->
           <span class="name-width">{{student.studentName}}</span>
           <a mat-button color="accent" routerLink="view/{{student.id}}">
             <mat-icon aria-label="edit_icon">visibility</mat-icon>
@@ -50,10 +51,12 @@
   <div *ngIf="!showLocation;">
     <article *ngFor="let year of learningYear" class="example-container">
       <h3>{{ year }}. Lernjahr</h3>
-      <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-        <div class="example-box" *ngFor="let student of students | filterYear: year" cdkDragLockAxis="y" cdkDrag>
-          <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon>
-          {{student.studentName}}
+      <div class="example-list">
+        <!-- cdkDropList (cdkDropListDropped)="drop($event)"-->
+        <div class="example-box" *ngFor="let student of students | filterYear: year">
+          <!-- cdkDragLockAxis="y" cdkDrag  -->
+          <!-- <mat-icon aria-label="drag_indicator">drag_indicator</mat-icon> -->
+          <span class="name-width">{{student.studentName}} </span>
           <a mat-button color="accent" routerLink="view/{{student.id}}">
             <mat-icon aria-label="edit_icon">visibility</mat-icon>
           </a>
