--- a/src/app/components/students/students.component.scss
+++ b/src/app/components/students/students.component.scss
@@ -59,18 +59,18 @@
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   box-sizing: border-box;
-  cursor: move;
+  /* cursor: move; */
   background: white;
   font-size: 14px;
   text-align: center;
   .name-width {
-    width: 200px;
+    width: 150px;
   }
 }
 
-.cdk-drag-preview {
+/* .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
@@ -83,15 +83,15 @@
 
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
+} */
 
 .example-box:last-child {
   border: none;
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+/* .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
+} */
 
 @media screen and (min-width: 600px) and (max-width: 959.98px) {
   .box-2 {
