--- a/src/app/components/students/upload-details/upload-details.component.html
+++ b/src/app/components/students/upload-details/upload-details.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <a href="{{ fileUpload.url }}" target="_blank" class="dark-link">
-    <mat-icon mat-list-icon class="mr-5" color="accent">insert_drive_file</mat-icon>
-    {{ fileUpload.name }}
+    <mat-icon class="mr-5" color="accent">insert_drive_file</mat-icon>
+    <span>{{ fileUpload.name }}</span>
   </a>
   <button mat-icon-button color="warn" aria-label="button to delete file" (click)="deleteFileUpload(fileUpload)">
     <mat-icon class="ml-15">delete</mat-icon>
