--- a/src/app/components/students/upload-form/upload-form.component.scss
+++ b/src/app/components/students/upload-form/upload-form.component.scss
@@ -1,7 +1,26 @@
+.upload-container {
+  margin-bottom: 10px;
+}
+
 .margin-r {
   margin-right: 10px;
 }
 
-.margin-b {
+.flex-container-upload {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   margin-bottom: 10px;
+  > button {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .flex-container-upload {
+    flex-direction: row;
+    > button {
+      margin-right: 15px;
+    }
+  }
 }
