--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,6 +52,13 @@ $my-theme-dark: mat.define-dark-theme(
   .dark-link:hover {
     color: pink !important;
   }
+  .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+    background-color: white !important;
+  }
+
+  .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+    background-color: #78909c !important;
+  }
 }
 
 .theme-light {
