--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @use "@angular/material" as mat;
-@include mat.core();
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
+@include mat.all-legacy-component-typographies();
+@include mat.legacy-core();
 
 @include mat.strong-focus-indicators(
   (
@@ -43,7 +52,7 @@ $my-theme-dark: mat.define-dark-theme(
 );
 
 .theme-dark {
-  @include mat.all-component-colors($my-theme-dark);
+  @include mat.all-legacy-component-colors($my-theme-dark);
 
   .dark-link,
   .dark-link:visited {
@@ -62,7 +71,7 @@ $my-theme-dark: mat.define-dark-theme(
 }
 
 .theme-light {
-  @include mat.all-component-colors($my-theme-light);
+  @include mat.all-legacy-component-colors($my-theme-light);
 }
 
 html,
